--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.7.2",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
+    "core-util-is": "^1.0.2",
     "cors": "^2.8.4",
     "csv2json": "^1.4.2",
     "debug": "~2.6.9",
@@ -43,9 +44,7 @@
     "rimraf": "^2.6.2",
     "serve-favicon": "^2.5.0",
     "uuid": "^3.2.1",
-    "yup": "^0.26.6"
-  },
-  "devDependencies": {
+    "yup": "^0.26.6",
     "babel-eslint": "^8.0.3",
     "babel-jest": "^21.2.0",
     "babel-register": "^6.26.0",
@@ -57,6 +56,8 @@
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
     "supertest": "^3.0.0"
+  },
+  "devDependencies": {
   },
   "babel": {
     "presets": [
